k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentry-google-chat
  labels:
    app: sentry-google-chat
spec:
  type: ClusterIP
  selector:
    app: sentry-google-chat
  ports:
    - name: http
      port: 80
      targetPort: 8080
